deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ds-hw2-web-service-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ds-hw2
  template:
    metadata:
      labels:
        app: ds-hw2
    spec:
      containers:
      - name: ds-hw2
        image: amirrze/ds-hw1-web-service-image:homework
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ds-hw2-web-service
spec:
  selector:
    app: ds-hw2
  ports:
    - protocol: TCP
      port: 80
