ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ds-hw2-web-service-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ds-hw2-web-service
            port:
              number: 80
